<resources>
    <string name="app_name">Greenex</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <!--Login Page Strings-->
    <string name="enter_email_phone">Enter Email/Phone</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="title_activity_register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="reset">Reset</string>
    <string name="already_have_pin"><u>Already have reset pin?</u></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_search">Search</string>
    <string name="search">Search</string>
    <string name="searchable">Searchable</string>
    <string name="enter_name">Full Name</string>
    <string name="buy">Buy</string>
    <string name="details">Details</string>
    <string name="signup_as">SignUp As</string>
    <string name="enter_password_again">Re-Enter Password</string>
    <string name="enter_address">Address</string>
    <string name="enter_email">Email</string>
    <string name="enter_mobile">Mobile</string>
    <string name="enter_taluka">Taluka</string>
    <string name="enter_district">District</string>
    <string name="enter_pin">Pincode</string>

    <!--Register Page Type Selection Spinner-->
    <string-array name="user_type">
        <item>Customer</item>
        <item>Consultant</item>
    </string-array>
    <string name="title_activity_reset_pin">ResetPin</string>
    <string name="reset_pin">Reset Pin</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="mobile">Mobile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_product_detaila">ProductDetaila</string>
    <string name="title_activity_product_details">ProductDetails</string>
    <string name="title_activity_buy">Buy</string>
    <string name="quantity">Quantity</string>
    <string name="addToCart">Add To Cart</string>
    <string name="unique_ID">Unique ID</string>
    <string name="crops">Crops</string>
    <string name="farms">Crops</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="title_activity_farms">Farms</string>
    <string name="old_password">Old Password</string>
    <string name="submit">Submit</string>
    <string name="area_in_acred">Area in acre</string>
    <string name="crop_name">Crop Name</string>
    <string name="title_activity_cart">Cart</string>
    <string name="title_activity_edit_cart_item">Edit</string>
    <string name="title_activity_edit">Edit</string>
    <string name="title_activity_place_order">Place Order</string>
    <string name="title_activity_checkout">Checkout</string>
    <string name="place_order">Place Order</string>

</resources>
