<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.greenexagro.greenex.ResetPin"
    tools:showIn="@layout/activity_reset_pin">


    <EditText
        android:id="@+id/etResetPass_Mobile"
        style="@style/Margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/mobile"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:maxLines="1" />

    <EditText
        android:id="@+id/etResetPass_Pin"
        style="@style/Margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/reset_pin"
        android:imeOptions="actionNext"
        android:maxLines="1" />

    <EditText
        android:id="@+id/etResetPass_Password"
        style="@style/Margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLines="1" />

    <EditText
        android:id="@+id/etResetPass_Re_Password"
        style="@style/Margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/re_enter_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLines="1" />

    <Button
        android:id="@+id/btResetPass_Reset"
        style="@style/ButtonRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="30dp"
        android:text="@string/reset" />


</LinearLayout>
