<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.greenexagro.greenex.NavigationFragments.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    style="@style/Margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/unique_ID"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvProfile_UID"
                    style="@style/Margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="######"
                    android:textSize="18sp" />


            </LinearLayout>

            <EditText
                android:id="@+id/etProfile_Name"
                style="@style/EditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_name"
                android:imeOptions="actionNext"
                android:inputType="textAutoComplete"
                android:maxLines="1" />


            <EditText
                android:id="@+id/etProfile_Email"
                style="@style/EditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

            <EditText
                android:id="@+id/etProfile_Mobile"
                style="@style/EditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_mobile"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLines="1" />

            <EditText
                android:id="@+id/etProfile_Address"
                style="@style/EditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:freezesText="true"
                android:hint="@string/enter_address"
                android:imeOptions="actionNext"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/etProfile_Taluka"
                style="@style/EditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_taluka"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/etProfile_Dist"
                style="@style/EditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_district"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/etProfile_ZIP"
                style="@style/EditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_pin"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1" />

            <Button
                android:id="@+id/btnProfile_Farms"
                style="@style/ButtonSkyblue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/farms" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="10">

                <Button
                    android:id="@+id/btnProfile_Edit"
                    style="@style/ButtonGreen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="5"
                    android:text="@string/edit_profile" />

                <Button
                    android:id="@+id/btnProfile_Pass"
                    style="@style/ButtonOrange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="5"
                    android:text="@string/change_password" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</FrameLayout>
