<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.greenexagro.greenex.Register"
    tools:showIn="@layout/activity_register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etRegister_Name"
                style="@style/EditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_name"
                android:imeOptions="actionNext"
                android:inputType="textAutoComplete"
                android:maxLines="1" />

            <LinearLayout
                style="@style/Margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/signup_as" />

                <Spinner
                    android:id="@+id/spRegister_Type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:entries="@array/user_type" />
            </LinearLayout>

            <EditText
                android:id="@+id/etRegister_Email"
                style="@style/EditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

            <EditText
                android:id="@+id/etRegister_Mobile"
                style="@style/EditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_mobile"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLines="1" />

            <EditText
                android:id="@+id/etRegister_Address"
                style="@style/EditTextField"
                android:hint="@string/enter_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:freezesText="true"
                android:imeOptions="actionNext"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/etRegister_Taluka"
                style="@style/EditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_taluka"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/etRegister_Dist"
                style="@style/EditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_district"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/etRegister_Pin"
                style="@style/EditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_pin"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1" />



            <EditText
                android:id="@+id/etRegister_Password"
                style="@style/EditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/enter_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1" />

            <EditText
                android:id="@+id/etRegister_Re_Password"
                style="@style/EditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/enter_password_again"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1" />

            <Button
                android:id="@+id/btRegister_Submit"
                style="@style/ButtonSkyblue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/sign_up" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>
