<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.greenexagro.greenex.LoginActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etLogin"
                style="@style/EditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:hint="@string/enter_email_phone"
                android:imeOptions="actionNext"
                android:inputType="textAutoComplete"
                android:maxLines="1"
                android:text="kalpana231991@gmail.com" />

            <EditText
                android:id="@+id/etPassword"
                style="@style/EditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/enter_password"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:maxLines="1"
                android:text="newpass" />

            <Button
                android:id="@+id/btLogin"
                style="@style/ButtonGreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/login" />

            <Button
                android:id="@+id/btSignUp"
                style="@style/ButtonSkyblue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/sign_up" />

            <TextView
                android:id="@+id/tvForgot"
                style="@style/TexRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/forgot_password" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>
