<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.greenexagro.greenex.ChangePassword"
    tools:showIn="@layout/activity_change_password">

    <EditText
        android:id="@+id/etChangePass_Old"
        style="@style/EditTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/old_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLines="1" />

    <EditText
        android:id="@+id/etChangePass_Password"
        style="@style/EditTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/enter_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLines="1" />

    <EditText
        android:id="@+id/etChangePass_Re_Password"
        style="@style/EditTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/enter_password_again"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLines="1" />

    <Button
        android:id="@+id/btChangePass_Submit"
        style="@style/ButtonSkyblue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit" />

</LinearLayout>
