<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_edit_profile"
    tools:context="com.greenexagro.greenex.EditProfile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etEditProfile_Name"
                style="@style/EditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_name"
                android:imeOptions="actionNext"
                android:inputType="textAutoComplete"
                android:maxLines="1" />

            <EditText
                android:id="@+id/etEditProfile_Email"
                style="@style/EditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

            <EditText
                android:id="@+id/etEditProfile_Mobile"
                style="@style/EditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_mobile"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLines="1" />

            <EditText
                android:id="@+id/etEditProfile_Address"
                style="@style/EditTextField"
                android:hint="@string/enter_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:freezesText="true"
                android:imeOptions="actionNext"
                android:selectAllOnFocus="true" />

            <EditText
                android:id="@+id/etEditProfile_Taluka"
                style="@style/EditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_taluka"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/etEditProfile_Dist"
                style="@style/EditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_district"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/etEditProfile_Zip"
                style="@style/EditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_pin"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLines="1" />

            <Button
                android:id="@+id/btEditProfile_Submit"
                style="@style/ButtonSkyblue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Update" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>
